# aperj

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aperj/: __init__.py  __main__.py  cli.py  config.py  models.py  output.py  scraper.py
aperj/sources/: __init__.py  base.py  cyrela.py  even.py  imoveisnet.py  imovelweb.py  judicearaujo.py  lopes.py  mercadolivre.py  mrv.py  nestoria.py  nuroa.py  olx.py  patrimovel.py  portalrjimoveis.py  privilegioimoveis.py  properstar.py  quintoandar.py  vivareal.py  zapimoveis.py
